--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ SLACK_BOT_TOKEN=xoxb-your-bot-token-here
 # App level token from the Basic Information page
 SLACK_APP_TOKEN=xapp-your-app-token-here
 
-# Channels to monitor (comma separated channel IDs)
+# Channels to monitor (comma separated channel IDs) or no id to monitor all channels
 SLACK_CHANNEL_IDS=C12345678,C87654321
 
 # Target users to translate messages from (comma separated usernames or user IDs)
